[gd_scene load_steps=55 format=3 uid="uid://cqg8mpc8rtgi2"]

[ext_resource type="Script" path="res://scripts/enemy/spider/spider.gd" id="1_wq7qh"]
[ext_resource type="Texture2D" uid="uid://n5rcuwye2gh6" path="res://assets/enemy/Spider/34x15 Monster 1 without shadows.png" id="2_jm5v8"]
[ext_resource type="Texture2D" uid="uid://jrouo6ipxsnr" path="res://assets/character/shadow/Shadow.png" id="3_iyvel"]
[ext_resource type="Script" path="res://scripts/HealthComponent.gd" id="10_13h06"]
[ext_resource type="Script" path="res://scripts/EnemyStateMachine.gd" id="10_cdy17"]
[ext_resource type="PackedScene" uid="uid://bf5as2jss0yx5" path="res://scenes/HurtboxComponent.tscn" id="10_wp523"]
[ext_resource type="Script" path="res://scripts/enemy/spider/Follow.gd" id="11_50xl7"]
[ext_resource type="PackedScene" uid="uid://887ht42jta6r" path="res://scenes/HitboxComponent.tscn" id="11_ngl4e"]
[ext_resource type="Script" path="res://scripts/enemy/spider/Death.gd" id="11_wtmj0"]
[ext_resource type="Script" path="res://scripts/enemy/spider/Attack.gd" id="12_vi0fd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mk4n4"]
atlas = ExtResource("2_jm5v8")
region = Rect2(0, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_aefuy"]
atlas = ExtResource("2_jm5v8")
region = Rect2(34, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_s36wa"]
atlas = ExtResource("2_jm5v8")
region = Rect2(68, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_sohxl"]
atlas = ExtResource("2_jm5v8")
region = Rect2(102, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec1f4"]
atlas = ExtResource("2_jm5v8")
region = Rect2(136, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g13v"]
atlas = ExtResource("2_jm5v8")
region = Rect2(170, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4mxr"]
atlas = ExtResource("2_jm5v8")
region = Rect2(204, 60, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_i486q"]
atlas = ExtResource("2_jm5v8")
region = Rect2(0, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_53mem"]
atlas = ExtResource("2_jm5v8")
region = Rect2(34, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_52xtr"]
atlas = ExtResource("2_jm5v8")
region = Rect2(68, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_8swut"]
atlas = ExtResource("2_jm5v8")
region = Rect2(102, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mksu"]
atlas = ExtResource("2_jm5v8")
region = Rect2(136, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywkrr"]
atlas = ExtResource("2_jm5v8")
region = Rect2(170, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5kim"]
atlas = ExtResource("2_jm5v8")
region = Rect2(204, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4it3"]
atlas = ExtResource("2_jm5v8")
region = Rect2(238, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w3o5"]
atlas = ExtResource("2_jm5v8")
region = Rect2(272, 90, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_feaoo"]
atlas = ExtResource("2_jm5v8")
region = Rect2(0, 0, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tecq"]
atlas = ExtResource("2_jm5v8")
region = Rect2(34, 0, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_m42et"]
atlas = ExtResource("2_jm5v8")
region = Rect2(68, 0, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_w51oj"]
atlas = ExtResource("2_jm5v8")
region = Rect2(102, 0, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptoku"]
atlas = ExtResource("2_jm5v8")
region = Rect2(136, 0, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7oxw"]
atlas = ExtResource("2_jm5v8")
region = Rect2(170, 0, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkps8"]
atlas = ExtResource("2_jm5v8")
region = Rect2(0, 15, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_aotuc"]
atlas = ExtResource("2_jm5v8")
region = Rect2(34, 15, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_exxet"]
atlas = ExtResource("2_jm5v8")
region = Rect2(68, 15, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_lykc6"]
atlas = ExtResource("2_jm5v8")
region = Rect2(102, 15, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pr5n"]
atlas = ExtResource("2_jm5v8")
region = Rect2(136, 15, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iblh"]
atlas = ExtResource("2_jm5v8")
region = Rect2(170, 15, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlmlp"]
atlas = ExtResource("2_jm5v8")
region = Rect2(0, 45, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulajs"]
atlas = ExtResource("2_jm5v8")
region = Rect2(34, 45, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy6js"]
atlas = ExtResource("2_jm5v8")
region = Rect2(68, 45, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ise5m"]
atlas = ExtResource("2_jm5v8")
region = Rect2(102, 45, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_aprl4"]
atlas = ExtResource("2_jm5v8")
region = Rect2(136, 45, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fhkk"]
atlas = ExtResource("2_jm5v8")
region = Rect2(170, 45, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hwnb"]
atlas = ExtResource("2_jm5v8")
region = Rect2(0, 30, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei0if"]
atlas = ExtResource("2_jm5v8")
region = Rect2(34, 30, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma44b"]
atlas = ExtResource("2_jm5v8")
region = Rect2(68, 30, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_x30ct"]
atlas = ExtResource("2_jm5v8")
region = Rect2(102, 30, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmuct"]
atlas = ExtResource("2_jm5v8")
region = Rect2(136, 30, 34, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0syo1"]
atlas = ExtResource("2_jm5v8")
region = Rect2(170, 30, 34, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_etob5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk4n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aefuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s36wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sohxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec1f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g13v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4mxr")
}],
"loop": false,
"name": &"attack_side",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i486q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53mem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52xtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8swut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mksu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywkrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5kim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4it3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w3o5")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_feaoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tecq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m42et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w51oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptoku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7oxw")
}],
"loop": true,
"name": &"idle_side",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkps8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aotuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exxet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lykc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pr5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iblh")
}],
"loop": true,
"name": &"run_down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlmlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulajs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy6js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ise5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aprl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fhkk")
}],
"loop": true,
"name": &"run_side",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hwnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei0if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma44b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x30ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmuct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0syo1")
}],
"loop": true,
"name": &"run_up",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d0d48"]
radius = 11.5
height = 23.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwskb"]
radius = 14.5
height = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xjmvc"]
radius = 17.5

[node name="Spider" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_wq7qh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_etob5")
animation = &"attack_side"

[node name="Shadow" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Shadow"]
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(-1.5, -3)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_iyvel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d0d48")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CapsuleShape2D_vwskb")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="HurtboxComponent" parent="." instance=ExtResource("10_wp523")]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_d0d48")
debug_color = Color(0.967424, 0, 0.474342, 0.42)

[node name="HitboxComponent" parent="." instance=ExtResource("11_ngl4e")]
collision_layer = 2
collision_mask = 0
damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_xjmvc")
disabled = true
debug_color = Color(0.638397, 0.523081, 0.143036, 0.42)

[node name="HealthComponentNew" type="Node" parent="."]
script = ExtResource("10_13h06")
enity_max_health = 10
health = 10

[node name="EnemyStateMachine" type="Node2D" parent="."]
script = ExtResource("10_cdy17")

[node name="Follow" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("11_50xl7")

[node name="Attack" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("12_vi0fd")

[node name="Death" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("11_wtmj0")

[connection signal="body_entered" from="PlayerDetection" to="EnemyStateMachine/Follow" method="_on_player_detection_body_entered"]
